<resources>
    <string name="app_name">洛鸢阅读器</string>
    <string name="string_length_test">Luo Tianyi (洛天依) is a Chinese vocaloid developed formerly by Bplats, Inc. under the Yamaha Corporation, and was created in collaboration with Shanghai HENIAN Information Technology Co. Ltd. She was released for the Vocaloid 3 engine. Her voice is provided by a female Chinese voice actress Shan Xin</string>
    <string name="searchTitle">搜索新书</string>
    <string name="searchButtonTitle">开始搜索</string>
    <string name="searchTextContent">在此处输入你想要查找的书</string>
    <string name="searchResultTitle">搜索结果</string>
    <string name="bookActionBarTitle">书籍详情</string>
    <string name="boolLoadingString">正在加载中…</string>
    <string name="bookTitle">书名：</string>
    <string name="bookAuthor">作者：</string>
    <string name="boolDesc">简介：</string>
    <string name="bookType">类型</string>
    <string name="bookUpdateTime">更新时间</string>
    <string name="bookImageDesc">书籍描述</string>
    <string name="databaseName">ly_db</string>
    <string name="action_setting">设置</string>
    <string name="action_search">搜索</string>
    <string name="action_download">下载</string>
    <string name="action_add">加入书架</string>
    <string name="action_delete">移出书架</string>
    <string name="mainTitle">我的书架</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_alert">时间提醒设置</string>

    <string name="pref_title_alert">定时提醒</string>
    <string name="pref_description_alert">在阅读一定时间后提醒休息</string>

    <string name="pref_title_alert_time">提醒时间</string>
    <string-array name="pref_alter_list_titles">
        <item>15分钟</item>
        <item>30分钟</item>
        <item>45分钟</item>
        <item>60分钟</item>
    </string-array>
    <string-array name="pref_alert_list_values">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>

    <!-- 数据下载与更新 -->
    <string name="pref_header_data_sync">数据更新和下载</string>

    <string name="pref_title_download_switch">下载限速</string>
    <string name="pref_description_download">下载速度过快可能触发目标网站的反爬虫错误</string>

    <string name="pref_title_download">下载速度</string>
    <string-array name="pref_download_titles">
        <item>0.5秒/页</item>
        <item>1  秒/页</item>
        <item>1.5秒/页</item>
        <item>2  秒/页</item>
        <item>3  秒/页</item>
        <item>不限制</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>0.5</item>
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>3</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">系统同步服务</string>

    <!-- 显示设置 -->
    <string name="pref_header_notifications">显示和替换</string>

    <string-array name="pref_font_size_list_titles">
        <item>15dp</item>
        <item>20dp</item>
        <item>22dp</item>
        <item>25dp</item>
        <item>28dp</item>
        <item>30dp</item>
        <item>32dp</item>
    </string-array>

    <string-array name="pref_font_size_list_values">
        <item>15</item>
        <item>20</item>
        <item>22</item>
        <item>25</item>
        <item>28</item>
        <item>30</item>
        <item>32</item>
    </string-array>
    <string name="pref_font_size_title">字体大小</string>
    <string name="pref_font_size_summary">重启应用后生效</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
