<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/prbBook"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:max="100"
        android:progressDrawable="@drawable/progressbar"
        android:visibility="visible" />

    <ScrollView
        android:id="@+id/scrollBook"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layoutBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="204dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/imgBook"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/boolDesc"
                    android:src="@drawable/book" />

                <LinearLayout
                    android:layout_width="204dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="67dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtTitteBookName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bookTitle" />

                        <TextView
                            android:id="@+id/txtTittleAuthor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bookAuthor" />

                        <TextView
                            android:id="@+id/txtTittleType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bookType"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/txtTittleUpdateTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bookUpdateTime" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="144dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtBookName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/boolLoadingString" />

                        <TextView
                            android:id="@+id/txtBookAuthor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/boolLoadingString"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/txtBookType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/boolLoadingString"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/txtBookUpdateTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/boolLoadingString"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/txtBookDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>